# RopUI

./: .gitignore  CMakeLists.txt  README.md
docs/: README_ZH.md
docs/Chinese/platform/: EventLoop.md  PC端TCP网络Watcher统一设计.md  RopHive调度层具体类设计.md  RopHive调度层设计.md  跨平台调度器开发.md
docs/English/platform/: EventLoop.md  RopHive_Scheduling_Design.md
example/: CMakeLists.txt
example/cocoa_metal_bad_apple/: CMakeLists.txt  generate_bad_apple_data.py  main.mm
example/egl_window/: CMakeLists.txt  egl_backend.cpp  egl_backend.h  main.cpp
example/iocp_tcp_server_example/: CMakeLists.txt  main.cc
example/kqueue_tcp_server_example/: CMakeLists.txt  main.cc
example/linux_loop_core_test/: CMakeLists.txt  main.cc
example/log_test/: main.cc
example/rop_hive_epoll_demo/: main.cc
example/tcp_client_example/: CMakeLists.txt  main.cc  test_server.py
example/tcp_server_async_example/: CMakeLists.txt  app.cc
example/tcp_server_example/: CMakeLists.txt  burst_clients.py  main.cc  main_multithread.cc
example/win32_timer_example/: CMakeLists.txt  main.cc
example/win32_window_example/: CMakeLists.txt  main.cc
example/work_steal_trace_demo/: main.cc
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/linux/eventloop/: epoll_backend.cc  epoll_backend.h  poll_backend.cc  poll_backend.h
platform/linux/network/watcher/: README.md  tcp_accept_watcher.cc  tcp_accept_watcher.h  tcp_connect_watcher.cc  tcp_connect_watcher.h  tcp_connection_watcher.cc  tcp_connection_watcher.h  tcp_socket_common.h
platform/linux/schedule/: epoll_backend.cc  epoll_backend.h  poll_backend.cc  poll_backend.h
platform/linux/schedule/watcher/: epoll_wakeup.cc  epoll_wakeup.h  epoll_worker_timer.cc  epoll_worker_timer.h  epoll_worker_wakeup.cc  epoll_worker_wakeup.h  poll_wakeup.cc  poll_wakeup.h  poll_worker_timer.cc  poll_worker_timer.h  poll_worker_wakeup.cc  poll_worker_wakeup.h
platform/linux/wayland/: wayland_backend.cc  wayland_backend.h
platform/macos/: CMakeLists.txt
platform/macos/network/watcher/: tcp_accept_watcher.cc  tcp_accept_watcher.h  tcp_connect_watcher.cc  tcp_connect_watcher.h  tcp_connection_watcher.cc  tcp_connection_watcher.h  tcp_socket_common.h
platform/macos/schedule/: kqueue_backend.cc  kqueue_backend.h  poll_backend.cc  poll_backend.h
platform/macos/schedule/watcher/: poll_wakeup.cc  poll_wakeup.h  poll_worker_wakeup.cc  poll_worker_wakeup.h
platform/network/watcher/: tcp_watchers.cc  tcp_watchers.h
platform/schedule/: eventloop.cc  eventloop.h  eventloop_core.cc  eventloop_core.h  hive.h  io_worker.cc  io_worker.h  worker_watcher.cc  worker_watcher.h
platform/windows/: CMakeLists.txt
platform/windows/network/watcher/: tcp_accept_watcher.cc  tcp_socket_common.h
platform/windows/schedule/: iocp_backend.cc
platform/windows/schedule/watcher/: iocp_wakeup.cc  iocp_wakeup.h  iocp_worker_timer.cc  iocp_worker_timer.h  iocp_worker_wakeup.cc  iocp_worker_wakeup.h  win32_wakeup.cc  win32_worker_timer.cc  win32_worker_timer.h  win32_worker_wakeup.cc
tools/sched_trace/: gen_sched_trace_anim.py
utils/concurrency/: task_deque.cc  task_deque.h
utils/log/: log.hpp
vg/: CMakeLists.txt
